--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,6 +1,30 @@
-/**
- * Configure Tailwind v4 in this file using CSS variables and directives:
- * https://tailwindcss.com/docs/v4-beta#css-first-configuration
- */
+/* app/styles/tailwind.css */
+@import "tailwindcss";
+/*@import "tailwindcss/preflight";*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@import 'tailwindcss';
+
+/* 你的自定义字体 */
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('/fonts/playfair-display/PlayfairDisplay-VariableFont_wght.ttf') format('truetype');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Source Sans 3';
+    src: url('/fonts/source-sans-3/SourceSans3-Light.ttf') format('truetype');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* 自定义样式 */
+@theme {
+    --font-family-playfair: 'Playfair Display', serif;
+    --font-family-source: 'Source Sans 3', sans-serif;
+}
